packages/svelte/tests/compiler-errors/samples/unmatched-closing-tag/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-closing-tag',
		message: '</div> attempted to close an element that was not open',
		position: [0, 0]
	}
});
